Fixing scroll visibility issue in IE.

--- a/src/main/less/dialog/floatz.dialog.less
+++ b/src/main/less/dialog/floatz.dialog.less
@@ -34,7 +34,7 @@
 .flz-dialog {
 	.flz-mx-dialog(80vw, 80vh);
 	background-color: #fff;
-	overflow: scroll;
+	overflow-y: scroll;
 	position: absolute;
 	z-index: 2;
 
